fix: improve vs-chip content visibility

--- a/packages/vlossom/src/components/vs-file-drop/VsFileDrop.scss
+++ b/packages/vlossom/src/components/vs-file-drop/VsFileDrop.scss
@@ -115,6 +115,17 @@ $file-drop-height-dense: var(--vs-file-drop-height, var(--vs-input-comp-height-d
                         white-space: nowrap;
                         width: 100%;
                         min-width: 0;
+
+                        .vs-file-drop-file-name {
+                            font-size: var(--vs-file-drop-fontSize, var(--vs-font-size));
+                            color: var(--vs-file-drop-fontColor, var(--vs-font-color));
+                        }
+
+                        .vs-file-drop-file-size {
+                            font-size: var(--vs-file-drop-fontSize, var(--vs-font-size-xs));
+                            color: var(--vs-file-drop-fontColor, var(--vs-font-color));
+                            margin-left: 0.5rem;
+                        }
                     }
                 }
             }
